--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
- <link rel="stylesheet" href="./style.css">
+ <link rel="stylesheet" href="./style.css" type='text/css'/>
  <title>Chess Player Shivraj Goswami's Official Website</title>
 </head>
 <body>
